<resources>
    <string name="app_name">Musetta</string>

    <string name="train_intervals_note">Intervals</string>
    <string name="train_intervals_detection">Intervals Detection</string>
    <string name="train_melodic_dictation">Melodic Dictation</string>
    <string name="train_chords">Chords</string>
    <string name="train_progressions">Chord Progressions</string>

    <string name="train_intervals_retry">Try again&#8230;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="label_interval">Interval: </string>

</resources>
